--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="title">Wild Barrier</h1>
-    
+    <h1 id="title" style="text-align: center; font-weight: bold; color: green;">Wild Barrier</h1>
     <script src="script.js"></script>
 </body>
 </html>
