--- a/second.html
+++ b/second.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wild Barrier - Customization</title>
+    <title>Wild Barrier - Sections</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,6 @@
         <div class="section" onclick="customizeName(this)">none</div>
         <div class="section" onclick="customizeName(this)">none</div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
